discussion/kv_engine/184677/184677_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Test scanAllVersions

Change-Id: I3b79c7e0dba43d4ebf57ec1010ce3ee26d954064

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-09 16:47:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-09 16:48:13.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/331451/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-09 17:11:08.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/767/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1516:21: error: too many arguments to function call, expected at most 4, have 5 [clang-diagnostic-error]
                    true)); // @todo: remove? Paolo has a change for this.
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/magma/include/libmagma/magma.h:1488:5: note: "NewDocInsert" declared here
    static WriteOperation NewDocInsert(const Slice& key,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1524:21: error: too many arguments to function call, expected at most 4, have 5 [clang-diagnostic-error]
                    true));
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/magma/include/libmagma/magma.h:1474:5: note: "NewDocUpsert" declared here
    static WriteOperation NewDocUpsert(const Slice& key,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1811:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1815:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1819:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2882:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:720:45: error: too many arguments to function call, expected single argument "size", have 2 arguments [clang-diagnostic-error]
    kvstore->setHistoryRetentionBytes(vbid, 1024 * 1024);
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:570:5: note: "setHistoryRetentionBytes" declared here
    void setHistoryRetentionBytes(size_t size) override;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:751:45: error: too many arguments to function call, expected single argument "size", have 2 arguments [clang-diagnostic-error]
    kvstore->setHistoryRetentionBytes(vbid, 1024 * 1024);
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:570:5: note: "setHistoryRetentionBytes" declared here
    void setHistoryRetentionBytes(size_t size) override;
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/767/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1516:21:
error: too many arguments to function call, expected at most 4, have 5 [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/767/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/944/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(774): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/944/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/738/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/738/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/777/ : FAILURE

Compile error at [2023-01-09T17:04:09.832Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/777/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/778/ : FAILURE

Compile error at [2023-01-09T17:01:56.743Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/778/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/771/ : FAILURE

Compile error at [2023-01-09T16:53:11.188Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/771/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/785/ : FAILURE

Compile error at [2023-01-09T17:05:42.612Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/785/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/758/ : FAILURE

Compile error at [2023-01-09T17:09:50.072Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/758/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1051/ : FAILURE

Compile error at [2023-01-09T16:52:40.633Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1051/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22044/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/787/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2023-01-16 15:12:11.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
